--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,29 @@ img {
   --accent-color: #8dcf2c;
 }
 
-/* struttura */
+/**** struttura ****/
 .app-wrapper {
   width: 100%;
   height: 100vh;
+
+  /* todo test */
+  background-color: lightblue;
+}
+
+/***** MAIN *****/
+main {
+  width: 100%;
+  height: calc(100vh - 80px);
+  /* todo test */
+  background-color: bisque;
+}
+
+/***** FOOTER *****/
+footer {
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+
+  /* todo test */
+  background-color: lightgreen;
 }
