--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,28 @@ main {
   background-color: bisque;
 }
 
+/* elemento overlay effettua l'upgrade */
+.btn-upgrade {
+  width: calc(100% - 250px);
+  height: 80px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: var(--primary-color);
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: flex-end;
+}
+.btn-upgrade a {
+  text-decoration: none;
+  color: inherit;
+  padding: 5px 15px;
+  border-radius: 15px;
+  border: 1px solid var(--primary-color);
+  align-self: center;
+  margin-right: 20px;
+}
+
 /* sidebar */
 .sidebar {
   width: 250px;
@@ -53,6 +75,7 @@ main {
 .main-area {
   width: calc(100% - 250px);
   color: var(--primary-color);
+  padding-top: 80px;
 
   /* todo test */
   background-color: lightsalmon;
