--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ main {
 .btn-upgrade {
   width: calc(100% - 250px);
   height: 80px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   color: var(--primary-color);
   position: absolute;
   top: 0;
@@ -55,20 +55,22 @@ main {
 .btn-upgrade a {
   text-decoration: none;
   color: inherit;
-  padding: 5px 15px;
-  border-radius: 15px;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
   border: 1px solid var(--primary-color);
   align-self: center;
   margin-right: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8rem;
 }
 
 /* sidebar */
 .sidebar {
   width: 250px;
   color: var(--secondary-color);
-
-  /* todo test */
-  background-color: darkturquoise;
+  overflow-y: hidden;
+  background-color: #000000;
 }
 
 /* area principale */
@@ -76,9 +78,8 @@ main {
   width: calc(100% - 250px);
   color: var(--primary-color);
   padding-top: 80px;
-
-  /* todo test */
-  background-color: lightsalmon;
+  overflow-y: auto;
+  background-color: #141922;
 }
 
 /***** FOOTER *****/
@@ -86,7 +87,6 @@ footer {
   width: 100%;
   height: 80px;
   overflow: hidden;
-
-  /* todo test */
-  background-color: lightgreen;
+  background-color: #282828;
+  color: var(--secondary-color);
 }
