--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,23 @@ main {
   overflow-y: hidden;
   background-color: #000000;
 }
-
+.sidebar-container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.sidebar-top {
+  height: 80px;
+  color: var(--primary-color);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.logo {
+  height: 50%;
+}
+.logo img {
+  height: 100%;
+}
 /* area principale */
 .main-area {
   width: calc(100% - 250px);
