--- a/css/style.css
+++ b/css/style.css
@@ -67,17 +67,23 @@ main {
 
 /***** SIDEBAR *****/
 .sidebar {
+  height: 100%;
   width: 250px;
   color: var(--secondary-color);
   overflow-y: hidden;
   background-color: #000000;
-  display: flex;
-  flex-direction: column;
 }
 /* padding laterale generale della sidebar */
 .sidebar-container {
+  height: 100%;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.sidebar-flex {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 /* elemento sidebar con logo */
 .sidebar-top {
@@ -138,9 +144,6 @@ main {
   padding-top: 20px;
   overflow-y: auto;
   flex-grow: 1;
-
-  /* todo test */
-  background-color: aquamarine;
 }
 .sidebar-playlist-box h3 {
   text-transform: uppercase;
@@ -150,7 +153,7 @@ main {
   list-style-type: none;
 }
 .sidebar-playlist-box li {
-  padding: 5px 0;
+  padding: 6px 0;
 }
 
 .sidebar-playlist-box li a {
@@ -179,13 +182,16 @@ main {
 }
 .user-data {
   color: var(--primary-color);
-  padding: 5px 0;
+  padding: 10px 0;
 }
 .user-data img {
   width: 2rem;
   height: 2rem;
   border-radius: 2rem;
   background-color: var(--secondary-color);
+}
+.user-name {
+  font-weight: bold;
 }
 
 /***** area principale *****/
