--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,39 @@ main {
   background-color: #141922;
 }
 
+.main-nav {
+  width: 100%;
+}
+.main-nav ul {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+.main-nav ul li {
+  padding: 0 10px;
+  line-height: 2rem;
+}
+.main-nav a {
+  text-decoration: none;
+  color: inherit;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
+/* sottolineatura verde navigazione main area */
+.main-nav ul li:first-child {
+  position: relative;
+}
+.main-nav ul li:first-child hr {
+  border: 1px solid var(--accent-color);
+  width: 30px;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 15px);
+}
+
 /***** FOOTER *****/
 footer {
   width: 100%;
