--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,7 @@ main {
 .main-nav ul {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   list-style-type: none;
