--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ img {
   --accent-color: #8dcf2c;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /**** struttura ****/
 .app-wrapper {
   width: 100%;
@@ -53,8 +58,6 @@ main {
   justify-content: flex-end;
 }
 .btn-upgrade a {
-  text-decoration: none;
-  color: inherit;
   padding: 1rem 2rem;
   border-radius: 2rem;
   border: 1px solid var(--primary-color);
@@ -63,6 +66,9 @@ main {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 0.8rem;
+}
+.btn-upgrade a:hover {
+  transform: scale(1.1);
 }
 
 /***** SIDEBAR *****/
@@ -109,10 +115,6 @@ main {
   padding-bottom: 5px;
 }
 
-.sidebar-nav-box li a {
-  text-decoration: none;
-  color: inherit;
-}
 .svg-icon {
   height: 2rem;
   width: 2rem;
@@ -156,11 +158,6 @@ main {
   padding: 6px 0;
 }
 
-.sidebar-playlist-box li a {
-  text-decoration: none;
-  color: inherit;
-}
-
 .playlist-creator i {
   font-size: 3rem;
   vertical-align: middle;
@@ -176,10 +173,7 @@ main {
   display: inline-block;
   vertical-align: middle;
 }
-.dl-app a {
-  text-decoration: none;
-  color: inherit;
-}
+
 .user-data {
   color: var(--primary-color);
   padding: 10px 0;
@@ -203,6 +197,12 @@ main {
   background-color: #141922;
 }
 
+/* padding laterale generale dell'area principale */
+.section-container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .main-nav {
   width: 100%;
 }
@@ -219,8 +219,6 @@ main {
   line-height: 2rem;
 }
 .main-nav a {
-  text-decoration: none;
-  color: inherit;
   text-transform: uppercase;
   font-size: 0.8rem;
 }
