--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ main {
   font-weight: bold;
   font-size: 0.8rem;
 }
+/* effetto hover si ingrandisce */
 .btn-upgrade a:hover {
   transform: scale(1.1);
 }
@@ -85,6 +86,7 @@ main {
   padding-left: 20px;
   padding-right: 20px;
 }
+/* effetto hover diventa bianco */
 .sidebar a:hover {
   color: var(--primary-color);
 }
@@ -192,12 +194,17 @@ main {
 }
 
 /***** area principale *****/
+/* tutti i titoli H2 della parte principale */
+h2 {
+  color: var(--primary-color);
+}
 .main-area {
   width: calc(100% - 250px);
   color: var(--primary-color);
   padding-top: 80px;
   overflow-y: auto;
   background-color: #141922;
+  color: var(--secondary-color);
 }
 
 /* padding laterale generale dell'area principale */
@@ -224,6 +231,10 @@ main {
 .main-nav a {
   text-transform: uppercase;
   font-size: 0.8rem;
+}
+/* effetto hover diventa bianco */
+.main-nav a:hover {
+  color: var(--primary-color);
 }
 
 /* sottolineatura verde navigazione main area */
