--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ h2 {
   transform: translate(-50%, -50%);
 }
 
-/* effetto over sulle copertine */
+/* effetto hover sulle copertine */
 .card:hover i {
   opacity: 1;
 }
@@ -321,6 +321,49 @@ footer {
   overflow: hidden;
   background-color: #282828;
   color: var(--secondary-color);
+}
+/* padding generale del footer */
+.footer-container {
+  height: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+/* box generale del footer */
+.footer-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* box del solo contenuto a sx del footer */
+.footer-sx-box {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.8rem;
+}
+.thumb-art {
+  width: 40px;
+  margin-right: 10px;
+}
+.album {
+  font-weight: bold;
+  color: var(--primary-color);
+}
+.text {
+  flex-grow: 1;
+}
+.song-data {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.icons i {
+  margin-left: 5px;
+  line-height: 40px;
 }
 
 /********** REGOLE RESPONSIVE **********/
