--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,61 @@ footer {
   color: var(--primary-color);
 }
 
+/* contenuto al centro del footer */
+.footer-centro {
+  flex-grow: 1;
+}
+.footer-mid-box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.media-buttons {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: var(--primary-color);
+}
+.media-buttons i {
+  padding: 0 20px;
+}
+.media-buttons i:nth-child(3) {
+  font-size: 2rem;
+}
+.media-progress {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 5px;
+}
+.meter {
+  height: 5px;
+  position: relative;
+  background-color: #5a5a5a;
+  border-radius: 25px;
+  margin: 0 10px;
+  width: 450px;
+}
+.fill-20-percent {
+  height: 5px;
+  width: 60px;
+  border-radius: 25px;
+  background-color: #c1c1c1;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+/* effetto hover sulla progress bar */
+.meter:hover .fill-20-percent {
+  background-color: var(--accent-color);
+}
+/* effetto hover sul tasto play */
+#play:hover {
+  transform: scale(1.2);
+}
+
 /********** REGOLE RESPONSIVE **********/
 
 /***** regole MD *****/
