--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,7 @@ footer {
 .footer-sx-box {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 0.8rem;
 }
 .thumb-art {
@@ -363,7 +364,7 @@ footer {
 }
 .icons i {
   margin-left: 5px;
-  line-height: 40px;
+  line-height: 20px;
 }
 
 /* effetti hover parte sx del footer */
@@ -378,7 +379,6 @@ footer {
 /* contenuto al centro del footer */
 .footer-centro {
   flex-grow: 1;
-  max-width: 400px;
 }
 .footer-mid-box {
   width: 100%;
@@ -399,7 +399,8 @@ footer {
   font-size: 2rem;
 }
 .media-progress {
-  width: 100%;
+  width: 40%;
+  min-width: 170px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -448,7 +449,7 @@ footer {
   background-color: #5a5a5a;
   border-radius: 25px;
   margin: 0 10px;
-  min-width: 150px;
+  min-width: 100px;
 }
 .fill-percent-small {
   height: 5px;
@@ -472,7 +473,6 @@ footer {
   .columns {
     width: calc(100% / 4);
   }
-  /*** regole per il footer ***/
 }
 
 /***** regole S *****/
@@ -480,7 +480,6 @@ footer {
   .columns {
     width: calc(100% / 2);
   }
-  /*** regole per il footer ***/
 }
 
 /***** regole XS *****/
@@ -546,5 +545,12 @@ footer {
   }
   .main-area {
     width: calc(100% - 60px);
+  }
+  /*** regole per il footer ***/
+  /*   .thumb-art {
+    width: 20px;
+  } */
+  .text {
+    padding: 0 5px;
   }
 }
