--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,13 @@ main {
   display: flex;
   justify-content: flex-end;
 }
+/* finto tasto vero e proprio effettua l'upgrade */
 .btn-upgrade a {
   padding: 1rem 2rem;
   border-radius: 2rem;
   border: 1px solid var(--primary-color);
   align-self: center;
-  margin-right: 20px;
+  margin-right: 30px;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 0.8rem;
@@ -104,6 +105,7 @@ main {
 .logo img {
   height: 100%;
 }
+/* logo secondario per schermi piccoli */
 .logo img:nth-child(2) {
   display: none;
 }
@@ -112,7 +114,6 @@ main {
 .sidebar-nav-box ul {
   list-style-type: none;
 }
-
 .sidebar-nav-box li {
   padding-bottom: 5px;
 }
@@ -272,13 +273,12 @@ h2 {
   padding-top: 5px;
 }
 
-/* sezione creted for */
+/* sezione created for */
 .created-box {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
-
 .created p {
   padding-bottom: 30px;
 }
@@ -289,13 +289,13 @@ h2 {
   display: flex;
   flex-wrap: wrap;
 }
-
 .popular p {
   padding-bottom: 30px;
 }
 .popular img {
   border-radius: 50%;
 }
+/* icona play al centro delle copertine trasparente di default */
 .card i {
   color: var(--primary-color);
   opacity: 0;
@@ -395,6 +395,7 @@ footer {
 .media-buttons i {
   padding: 0 10px;
 }
+/* tasto play grande il doppo degli altri comandi */
 .media-buttons a:nth-child(3) {
   font-size: 2rem;
 }
@@ -406,9 +407,7 @@ footer {
   align-items: center;
   margin-top: 5px;
 }
-.media-progress a {
-  width: 100%;
-}
+/* progress bar della canzone */
 .meter {
   height: 5px;
   position: relative;
@@ -428,6 +427,9 @@ footer {
 }
 
 /* effetto hover sulla progress bar */
+.meter:hover {
+  cursor: pointer;
+}
 .meter:hover .fill-20-percent {
   background-color: var(--accent-color);
 }
@@ -464,7 +466,10 @@ footer {
   top: 0;
 }
 
-/* effetto hover sulla progress bar */
+/* effetto hover sulla progress bar a destra del footer*/
+.meter-small:hover {
+  cursor: pointer;
+}
 .meter-small:hover .fill-percent-small {
   background-color: var(--accent-color);
 }
@@ -508,19 +513,19 @@ footer {
   .logo img:nth-child(2) {
     display: inline-block;
   }
-  /* testo home invisibile */
+  /* scritta home invisibile */
   #home span:nth-child(2) {
     display: none;
   }
-  /* testo cerca invisibile */
+  /* scritta cerca invisibile */
   #cerca span:nth-child(2) {
     display: none;
   }
-  /* testo libreria invisibile */
+  /* scritta libreria invisibile */
   #libreria span:nth-child(2) {
     display: none;
   }
-  /* parte icone navigazione occupa tutto lo spazio disponibile */
+  /* parte icone navigazione occupa tutto lo spazio verticale disponibile */
   .sidebar-nav-box {
     flex-grow: 1;
   }
@@ -534,7 +539,7 @@ footer {
     justify-content: center;
     border: none;
   }
-  /* testo installa app invisibile */
+  /* scritta installa app invisibile */
   .dl-app a span:nth-child(2) {
     display: none;
   }
